<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".view.Login">

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="101dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress2"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/loginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/main_logo" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="151dp"
        android:layout_height="59dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="53dp"
        android:backgroundTint="@color/lightGreen"
        android:onClick="LoginBtnClicked"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/registerNow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/registerNow"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="@color/lightGreen"
        android:fontFamily="sans-serif-medium"
        android:text="@string/go_to_register_now"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>